api update + few questions