@@ -4,7 +4,6 @@ import com.google.inject.Inject;
 import io.javalin.Javalin;
 
 import javax.inject.Singleton;
-import java.util.Collections;
 import java.util.Set;
 
 @Singleton
@@ -12,7 +11,7 @@ public class WebEntrypoint implements AppEntrypoint {
     private Javalin app;
 
     @Inject(optional = true)
-    private Set<Routing> routes = Collections.emptySet();
+    private Set<Routing> routes = Set.of();
 
     @Inject
     public WebEntrypoint(Javalin app) {
@@ -23,6 +22,7 @@ public class WebEntrypoint implements AppEntrypoint {
     public void boot(String[] args) {
         bindRoutes();
         app.start(7000);
+        app.before(context -> context.header("Access-Control-Allow-Origin", "*")); // TODO temporary
     }
 
     private void bindRoutes() {
